# export

./: manage.py  pyproject.toml
export_project/: asgi.py  settings.py  urls.py  wsgi.py
shop/: forms.py  models.py  urls.py  views.py
shop/migrations/: 0001_initial.py  0002_product_user.py  0003_alter_product_image.py  0004_alter_product_image.py
static/css/: style.css
templates/: base.html
templates/includes/: navbar.html
templates/shop/: add_product.html  product_create.html  product_delete.html  product_detail.html  product_list.html  product_update.html
templates/users/: dashboard.html  login.html  logout.html  register.html
users/: forms.py  urls.py  views.py
